--- a/aiku/build.gradle
+++ b/aiku/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
 
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
