--- a/aiku/src/test/resources/application.yml
+++ b/aiku/src/test/resources/application.yml
@@ -11,6 +11,7 @@ spring:
 #      ddl-auto: create
     properties:
       hibernate:
+        default_batch_fetch_size : 100
         #        show_sql: true
         format_sql: true
     show-sql: true
