chore : ec2 우분투 환경을 위한 설정 변경

--- a/aiku/src/main/resources/application.yml
+++ b/aiku/src/main/resources/application.yml
@@ -8,8 +8,10 @@ spring:
   jpa:
     hibernate:
 #      ddl-auto: create
+    database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
         default_batch_fetch_size : 100
 #        show_sql: true
         format_sql: true
