feat : ec2 Https 연결을 위한 설정

--- a/aiku/src/main/resources/application.yml
+++ b/aiku/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/Downloads/aikuTest
+    url: jdbc:h2:tcp://172.31.39.61/~/aikuDB
+#    url: jdbc:h2:tcp://localhost/~/Downloads/aikuTest
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -26,3 +27,9 @@ logging:
   level:
 #    root: trace
   org.hibernate.type: trace
+
+server:
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-type: PKCS12
+    key-store-password: aiku1234
