--- a/aiku/src/main/resources/application.yml
+++ b/aiku/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://172.31.39.61/~/aikuDB
-#    url: jdbc:h2:tcp://localhost/~/Downloads/aikuTest
+#    url: jdbc:h2:tcp://172.31.39.61/~/aikuDB
+    url: jdbc:h2:tcp://localhost/~/Downloads/aikuTest
     username: sa
 #    username: aiku
     password:
@@ -33,7 +33,7 @@ logging:
 server:
   port: 443
   ssl:
-    key-store: classpath:keystore.p12
+    key-store: keystore.p12
 #    key-store: /home/ubuntu/aiku_backend/AiKu_backend/aiku/keystore.p12
     key-store-type: PKCS12
     key-store-password: aiku1234
