--- a/aiku/build.gradle
+++ b/aiku/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
 	//firebase
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+	//AWS-S3
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
