--- a/aiku/src/main/resources/application.yml
+++ b/aiku/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    include: aws
   datasource:
 #    url: jdbc:h2:tcp://172.31.39.61:9092/~/aikuDB
     url: jdbc:h2:tcp://localhost/~/Downloads/aikuTest
