feat: 베팅 알림 추가

--- a/aiku/.gitignore
+++ b/aiku/.gitignore
@@ -36,4 +36,5 @@ out/
 ### VS Code ###
 .vscode/
 
+aiku/src/main/java/konkuk/aiku/firebase/aiku-18cc3-firebase-adminsdk-akm67-c379d3ded3.json
 aiku-18cc3-firebase-adminsdk-akm67-c379d3ded3.json
