--- a/aiku/build.gradle
+++ b/aiku/build.gradle
@@ -15,6 +15,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	all {
+		exclude group: 'commons-logging', module: 'commons-logging'
+	}
 }
 
 repositories {
@@ -59,4 +62,3 @@ tasks.named('test') {
 clean {
 	delete file('src/main/generated')
 }
-
