--- a/aiku/src/test/resources/application.yml
+++ b/aiku/src/test/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 
   jpa:
     hibernate:
-#      ddl-auto: create
+      ddl-auto: create
     properties:
       hibernate:
         default_batch_fetch_size : 100
