--- a/aiku/src/main/resources/application.yml
+++ b/aiku/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
   jpa:
     hibernate:
-#      ddl-auto: create
+      ddl-auto: create
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
